cloud-continuum-experiments/experiments/airwatch/k3s/shared/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: airwatch
---
apiVersion: v1
kind: Namespace
metadata:
  name: airwatch-remote
